--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -1,6 +1,29 @@
 .container-fluid{
     position: relative;
     header {
+        nav{
+            ul{
+                display: flex;
+                margin: 50px;
+                li{
+                    margin-left: 20px;
+                    list-style: none;
+                    a{
+                        color: white;
+                    }
+                }
+            }
+        }
+        
+        .c-logo{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            .logo{
+                width: 100px;
+            }
+        }
     background: rgba(217, 4, 41, 1);
     .input-group{
         background: rgba(202, 202, 202, 1);;
@@ -14,151 +37,77 @@
         }
     }
 }
-    .menu{
+    
         
-        }
-        background: rgba(202, 202, 202, 1);;
-        ul{
-            display: flex;
-            justify-content: space-around;
-            font-family: "Timmana", sans-serif;
-            font-size: 20px;
-            padding: 0;
-            margin: 0;
-            li{
-                
-                list-style: none;
-                padding: 20px;
-                position: relative;
-                
-                a{
-                    text-decoration: none;
-                    color: #fff;
-                    text-shadow: 1px 1px 2px #000000;
-                    transition: ease-in-out 0.4s;
-                    &:hover{
-                        color:#EF233C;
-                    }
-                }
-                &:hover .sub-menu{
-                    display: block;
-                    position: absolute;
-                    background: rgba(239, 35, 60, 1);
-                    border-radius: 4px;
-                    box-shadow: -1px 1px 3px #000000;
-                    font-size: 15px;
-                    z-index: 1;
-                    a{
-                        color: #fff;
-                        &:hover{
-                            color: rgb(178, 239, 35);
-                        }
-                    }
-                }
-                ul{
-                    display: none;
-                }
-            }
+        
+.carousel{
+    padding: 0;
+    margin: 0;
+}
+
+.titulo-product{
+    margin: 30px 0px;
+    font-family: "Baloo Paaji 2", cursive;
+    .estilo-fuente-1{
+        font-size: 40px;
+        font-weight: bold;
+        color: #c9ff07;
+    }
+    .estilo-fuente-2{
+        font-size: 20px;
+        color: #fff;
+        background: transparent;
+    }
+}
+section{
+    background: rgba(239, 35, 60, 1);
+    font-family: "Baloo Paaji 2", cursive;
+    
+    .card-img-top{
+        width: 100%;
+    }
+    .btn{
+        background: rgba(239, 35, 60, 1);
+        border: 1px solid #000000;
+        transition: ease-in-out 0.5s;
+        &:hover{
+            background: rgba(202, 202, 202, 1);
+            color: #000000;
         }
     }
-    .carousel{
-        padding: 0;
-        margin: 0;
-    }
-    .mobile{
-        display: flex;
-        justify-content: center;
-        .btn {
-            color: #EF233C;
-            border:1px solid #EF233C;
-            &:hover{
-                background: #EF233C;
-                color: #fff;
-                box-shadow: 1px 1px 2px #000000;
-            }
-        }
-    }
-    .titulo-product{
-        margin: 30px 0px;
-        font-family: "Baloo Paaji 2", cursive;
-        .estilo-fuente-1{
-            font-size: 40px;
-            font-weight: bold;
-            color: #c9ff07;
-        }
-        .estilo-fuente-2{
-            font-size: 20px;
+    .card{
+        
+        &:hover{
+            background: rgb(59, 59, 59);
             color: #fff;
-            background: transparent;
+            transition: ease-in-out 0.3s;
         }
     }
-    section{
-        background: rgb(161, 161, 161);
-        font-family: "Baloo Paaji 2", cursive;
-        section{
-            margin-bottom: 20px;
-        }
-        .btn{
-            background: rgba(239, 35, 60, 1);
-            border: 1px solid #000000;
-            transition: ease-in-out 0.5s;
-            &:hover{
-                background: rgba(202, 202, 202, 1);
-                color: #000000;
-            }
-        }
-        .card{
-            
-            &:hover{
-                background: rgb(59, 59, 59);
-                color: #fff;
-                transition: ease-in-out 0.3s;
-            }
-        }
-        .mas-vendidos{
-            background: blue;
-        }
-        .precio{
-            display: flex;
-            justify-content: center;
-            font-size: 40px;
-        }
-
+    .mas-vendidos{
+        background: blue;
     }
-    #top-venta{
-        background:url(/images/bg.jpg);
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin: 0;
-        width: 100vw;
-    }
-        
-}
-@media (min-width:992px){
-    .navbar{
-        display: none;
-    }
-}
-@media (max-width:992px){
-    .navbar{
-        display: none;
-    }
-}
-
-@media (max-width:544px){
-    .menu{
-        display: none;
-    }
-    .search{
-        display: none;
-    }
-    .logo{
-        margin: 0 auto;
-    }
-    .navbar-expand-lg{
+    .precio{
         display: flex;
         justify-content: center;
+        font-size: 40px;
     }
+    
 }
+#top-venta{
+    background:url(/images/bg.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    width: 100vw;
+    #contenedorc{
+       display: grid;
+       grid-template-columns: repeat(4,auto);
+       gap: 20px;
+     }
+}
+}
+
+
+
