--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,9 @@
 <header class="row d-flex justify-content-between">
-    <div class="logo col-5 col-sm-4 col-md-3 col-lg-2 ">
-        <img class="img-fluid" src="/images/logo.png" alt="logo">
+    <div class="c-logo col-5 col-sm-4 col-md-3 col-lg-2 ">
+        <img class="img-fluid logo" src="/images/logo.png" alt="logo">
+        <h1>E-commerce</h1>
     </div>
-    <div class="search col-7  col-md-5 col-lg-6  align-self-center">
+    <div class="search col-7  col-md-4 col-lg-4  align-self-center">
         <div class="input-group md-3">
             <input type="text" class="form-control" placeholder="Buscar productos,marcas y mas!"
                 aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -11,4 +12,12 @@
             </div>
         </div>
     </div>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Catalogo</a></li>
+            <li><a href="">Registro</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
+    </nav>
 </header>
