Añadiendo modelo carrito y preparando el cartController

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,16 @@
       <%- include('./partials/header') %>
         <!-- MENU DE ESCRITORIO -->
         <%- include('./partials/navbar')%> 
+        <!--MENSAJE DE REGISTRO-->
+        <% /* %><div class="registro row">
+          <div class col-12>
+            <% if (typeof mensajeRegistro != undefined) { %>
+            <div class="alert alert-success" role="alert">
+              <%= mensajeRegistro %> 
+            </div>
+            <% } %>
+          </div>
+        </div> <% */ %> 
         <!-- CARROUSEL -->
         <div class="carrousel row">
             <div id="carouselExampleControls" class="carousel slide col-12" data-ride="carousel">
