--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,11 +13,14 @@
         </div>
     </div>
     <nav>
+        
+
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="">Catalogo</a></li>
-            <li><a href="">Registro</a></li>
-            <li><a href="">Login</a></li>
+            <li><a href="/user/register">Registro</a></li>
+            
+            <li><a href="/user/login">Login</a></li>
         </ul>
     </nav>
 </header>
