--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,8 +19,19 @@
             <li><a href="/">Home</a></li>
             <li><a href="">Catalogo</a></li>
             <li><a href="/user/register">Registro</a></li>
-            
-            <li><a href="/user/login">Login</a></li>
+                <!--VALIDACION SI HAY UN USUARIO-->
+            <% if (typeof user != "undefined") { %>
+                <li>
+                    <a href="/user/perfiluser">Bienvenid@:<strong style="color:yellow;"> <%= user.first_name %></strong> </a>
+                     
+                </li>
+               
+                <li><a href="/user/logout"><i class="fas fa-sign-out-alt"></i></a></li>
+              <% } %>
+              <% if (typeof user == "undefined") { %>
+                <li><a href="/user/login">Login</a></li>               
+              <% } %>
+                <!--VALIDACION SI HAY UN USUARIO-->
         </ul>
     </nav>
 </header>
