--- a/views/perfilUser.ejs
+++ b/views/perfilUser.ejs
@@ -8,17 +8,16 @@
         <%- include('./partials/header') %>
         <%- include('./partials/navbar') %>
 
-        <% let logeadoPerfil= users.find(element => { %>
-        <% return element.email == logeadoUser %>
-        <% }) %>
+        
 
-        <% if (logeadoPerfil) { %>
-
+        <% if (typeof user != "undefined") { %>
+            
+        
         <div class="container  ">
             <!--Logo-->
             <div class="row">
                 <div class="col-sm-10">
-                    <h1><%= logeadoPerfil.first_name %> </h1><a class="btn btn-primary" href="/user/logout"
+                    <h1> <%= `Usuario: ${user.first_name} ${user.last_name}` %>    </h1><a class="btn btn-primary" href="/user/logout"
                         role="button">Logout</a>
                 </div>
                 <div class="col-sm-2"><a href="#" class="pull-right"><img title="profile image"
@@ -28,25 +27,15 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="logo">
-                        <img src="/images/img-perfil/<%=logeadoPerfil.avatar %>" class="avatar img-circle img-thumbnail"
+                        <img src="/images/img-perfil/<%=user.avatar %>  " class="avatar img-circle img-thumbnail"
                             alt="avatar">
                     </div>
                     </hr><br>
                     <!--WEBSITE-->
                     <div class="panel panel-default">
-                        <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i></div>
+                        <div class="panel-heading">Gracias por elegirnos <i class="fa fa-link fa-1x"></i></div>
                         <div class="panel-body"><a href="#">www.GameOver.com.ar</a></div>
                     </div>
-                    <!--ACTIVIDAD-->
-                    <ul class="list-group">
-                        <li class="list-group-item text-muted">Actividad</i></li>
-                        <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span> 13
-                        </li>
-                        <li class="list-group-item text-right"><span class="pull-left"><strong>Posts</strong></span> 37
-                        </li>
-                        <li class="list-group-item text-right"><span class="pull-left"><strong>Followers</strong></span>
-                            78</li>
-                    </ul>
                     <!--REDES SOCIALES-->
                     <div class="panel mb-5">
                         <div class="panel-heading mb-3">Redes Sociales:</div>
@@ -67,7 +56,7 @@
                                 <h4>Nombre</h4>
                             </label>
                             <input type="text" class="form-control" name="first_name" id="first_name"
-                                value="<%=logeadoPerfil.first_name %>">
+                                value="<%=user.first_name %>">
                         </div>
                         <!--APELLIDO-->
                         <div class="col-xs-6">
@@ -75,16 +64,9 @@
                                 <h4>Apellido</h4>
                             </label>
                             <input type="text" class="form-control" name="last_name" id="last_name"
-                                value="<%=logeadoPerfil.last_name %>">
+                                value="<%=user.last_name %>">
                         </div>
-                        <!--EMAIL-->
-                        <div class="col-xs-6">
-                            <label for="email">
-                                <h4>Email</h4>
-                            </label>
-                            <input type="email" class="form-control" name="email" id="email"
-                                value="<%=logeadoPerfil.email %>">
-                        </div>
+                        
                         <!--AVATAR-->
                         <div class="col-xs-6">
                             <label for="avatar">
@@ -110,9 +92,10 @@
                 </div>
             </div>
         </div>
+        <% } %>
         <%- include('./partials/footer') %>
     </div>
-    <% } %>
+   
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
