--- a/views/DBEdit.ejs
+++ b/views/DBEdit.ejs
@@ -28,7 +28,7 @@
 
 
     <h1>Editar película</h1>
-    <form action="/productsdb/editar/<%=juego.id%>" method="POST">
+    <form action="/products/editar/<%=juego.id%>" method="POST">
         <div>
             <label for="">Nombre</label>
             <input type="text" name="name" value="<%=juego.name%>">
