--- a/views/DBProducts.ejs
+++ b/views/DBProducts.ejs
@@ -34,7 +34,7 @@
                               
                             </strong>
                             <hr>
-                        <a href="/productsdb/<%= juegos[i].id %>" class="btn btn-primary offset-4">Comprar</a>
+                        <a href="/products/<%= juegos[i].id %>" class="btn btn-primary offset-4">Comprar</a>
                       </div>
                     </div>
               <% } %>
