--- a/views/DBaddProduct.ejs
+++ b/views/DBaddProduct.ejs
@@ -8,7 +8,7 @@
             <nav class="row">
                 <nav class="menu col-12 d-none d-sm-block">
                     <ul>
-                                                <li><a href="/">Home</a></li><span class="border-right"></span>
+                        <li><a href="/">Home</a></li><span class="border-right"></span>
                         <li><a href="">Estadisticas</a>
                         </li><span class="border-right"></span>
                         <li><a href="">FanZone</a></li><span class="border-right"></span>
@@ -22,7 +22,7 @@
                 <div class="card col-12">
                     <div class="card-body">
                       <h2 class="col-12">AGREGAR PRODUCTO</h2>
-                        <form action="/productsdb/crear" method="POST">
+                        <form action="/products/crear" method="POST">
                             <div class="form-group">
                               <label for="name">Nombre de producto</label>
                               <input name="name" type="name" class="form-control" id="name" placeholder="Producto">
