--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
                     </p>
                     <strong class="precio">$<%= masComprados.price %> </strong>
                     <hr>
-                    <a href="/products/detail/" class="btn btn-primary offset-4">Comprar</a>
+                    <a href="/products/detail/<%= masComprados.id %>" class="btn btn-primary offset-4">Comprar</a>
                   </div>
                 </div>
                 <% }) %>
