--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,34 @@
 <header class="row d-flex justify-content-between">
     <div class="c-logo col-5 col-sm-4 col-md-3 col-lg-2 ">
-        <img class="img-fluid logo" src="/images/logo.png" alt="logo">
+        <a href="/">
+            <img class="img-fluid logo" src="/images/logo.png" alt="logo">
+        </a>
         <h1>E-commerce</h1>
     </div>
     <div class="search col-7  col-md-4 col-lg-4  align-self-center">
-        <div class="input-group md-3">
-            <input type="text" class="form-control" placeholder="Buscar productos,marcas y mas!"
-                aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <button class="lupa btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
-            </div>
+        <div>
+            <form action="/" method="GET" style="position: relative;">
+                <input type="text" name="search" class="search" placeholder="BUSCADOR">
+               <button type="submit"><i class="lupa fas fa-search"></i></button>
+                
+                <% if ( typeof resultSearch != "undefined") { %>
+                    <% if (resultSearch != "") { %>
+                    <div class="gamefound" >
+                        <a href="/">
+                            <i class="far fa-times-circle"></i>
+                        </a>
+                    <% resultSearch.forEach(element => { %>
+                            <ul>
+                                <a href="" >
+                                <%=element.name  %>     
+                                <img  src="/images/product-games/<%= element.image %>  " alt="Card image cap"> 
+                            </a>
+                            </ul>
+                        <% }) %>
+                    </div>
+                    <% } %>
+                <% } %>
+            </form>
         </div>
     </div>
     <nav>
@@ -18,18 +37,18 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="">Catalogo</a></li>
-            <li><a href="/user/register">Registro</a></li>
-                <!--VALIDACION SI HAY UN USUARIO-->
+            <!--VALIDACION SI HAY UN USUARIO-->
             <% if (typeof user != "undefined") { %>
                 <li>
                     <a href="/user/perfiluser">Bienvenid@:<strong style="color:yellow;"> <%= user.first_name %></strong> </a>
-                     
+                    
                 </li>
-               
+                
                 <li><a href="/user/logout"><i class="fas fa-sign-out-alt"></i></a></li>
-              <% } %>
-              <% if (typeof user == "undefined") { %>
-                <li><a href="/user/login">Login</a></li>               
+                <% } %>
+                <% if (typeof user == "undefined") { %>
+                    <li><a href="/user/login">Login</a></li>               
+                    <li><a href="/user/register">Registro</a></li>
               <% } %>
                 <!--VALIDACION SI HAY UN USUARIO-->
         </ul>
