--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,4 +34,5 @@
                 <!--VALIDACION SI HAY UN USUARIO-->
         </ul>
     </nav>
+    <script> var userLoggedFront = <%- (typeof user != "undefined")?true:false %> </script>
 </header>
