--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
                   </p>
                     <strong class="precio">$<%= recomendados[i].price %></strong>
                     <hr>
-                <a href="/products/detail/" class="btn btn-primary offset-4">Comprar</a>
+                <a href="/products/<%= recomendados[i].id %>" class="btn btn-primary offset-4">Comprar</a>
               </div>
             </div>
             <% } %> 
